# foxy_server

./: .clang-format  .clang-tidy  .env.test  .gitignore  .gitmodules  .lint-skip  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.build  Dockerfile_qodana  Image.cc  Image.h  Item.cc  Item.h  Page.cc  Page.h  README.md  atlas.hcl  changes.sql  config.json  docker-compose.yml  envs.cmake  example.env  fixtures.sql  gallery_ItemController.cc  gallery_ItemController.h  gallery_PageController.cc  gallery_PageController.h  helper.sql  init-db.sh  main.cpp  model.json  qodana.yaml  sonar-project.properties
.claude/agents/: build-helper.md  client-creator.md  controller-creator.md  model-creator.md  orm-helper.md  test-writer.md
.claude/skills/run-foxy-server/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  code_quality.yml  codeql.yml  deploy.yml  qodana.yml  sonarcloud.yml
cmake/: cmake-scripts.cmake  cpm.cmake  dependencies.cmake  format.cmake  sanitizers.cmake  sentry.cmake  tests.cmake
docker/: entrypoint.sh
docs/superpowers/plans/: 2026-05-27-cors-on-404-errors.md
log/: clang-err.txt  clang-out.txt
migrations/: 20260101000000_baseline.sql  20260225110739_add_pinterest_token.sql  atlas.sum
scripts/: sonarcloud-check.sh  worktree.sh
src/: gallery_ItemController.cc  gallery_ItemController.h  gallery_PageController.cc  gallery_PageController.h  main.cpp
src/auth/: Auth.cc  Auth.h
src/clients/: FileTransferInfo.h  HttpRequestInterface.h  IClient.cpp  IClient.h  IClientImpl.cpp  IClientImpl.h  MastodonClient.cpp  PinterestClient.cpp  PinterestClient.h  TwitterClient.cpp  TwitterClient.h
src/clients/models/: Pin.cpp  Pin.h  SocialMediaType.h  SocialMediaType.inl  Tweet.cpp  Tweet.h
src/code/: cors.h
src/code/auth/: Auth.cc  Auth.cpp  Auth.h
src/code/clients/: FileTransferInfo.h  HttpRequestInterface.h  IClient.cpp  IClient.h  IClientImpl.cpp  IClientImpl.h  MastodonClient.cpp  MastodonClient.h  PinterestClient.cpp  PinterestClient.h  TwitterClient.cpp  TwitterClient.h  YouTubeClient.cpp  YouTubeClient.h
src/code/clients/models/: Pin.cpp  Pin.h  SocialMediaHandler.h  SocialMediaType.h  SocialMediaType.inl  SocialMediaTypeImpl.cpp  SocialMediaTypeImpl.h  Tweet.cpp  Tweet.h  YouTube.cpp  YouTube.h
src/code/controllers/: Address.cpp  Address.h  AiAnalyzeImage.cpp  AiAnalyzeImage.h  BaseCRUD.cpp  BaseCRUD.h  Basket.cpp  Basket.h  BasketItem.cpp  BasketItem.h  Country.cpp  Country.h  FinancialDetails.cpp  FinancialDetails.h  Item.cc  Item.cpp  Item.h  Media.cpp  Media.h  Order.cc  Order.cpp  Order.h  Page.cc  Page.cpp  Page.h  PinterestOAuth.cpp  PinterestOAuth.h  Review.cpp  Review.h  ShippingProfile.cpp  ShippingProfile.h  ShippingRate.cc  ShippingRate.cpp  ShippingRate.h  SocialMedia.cpp  SocialMedia.h  Tag.cpp  Tag.h  User.cpp  User.h
src/code/filters/: JwtGoogleFilter.cc  JwtGoogleFilter.h  LocalRun.cpp  LocalRun.h
src/code/models/: AddressModel.cpp  AddressModel.h  BaseField.h  BaseModel.h  BaseModel.inl  BaseModelImpl.cpp  BaseModelImpl.h  BasketItemModel.cpp  BasketItemModel.h  BasketModel.cpp  BasketModel.h  CountriesIpsModel.cpp  CountriesIpsModel.h  CountryModel.cpp  CountryModel.h  FinancialDetailsModel.cpp  FinancialDetailsModel.h  ItemModel.cpp  ItemModel.h  MediaModel.cpp  MediaModel.h  OrderModel.cpp  OrderModel.h  PageModel.cpp  PageModel.h  PinterestTokenModel.cpp  PinterestTokenModel.h  ReviewModel.cpp  ReviewModel.h  ShippingProfileModel.cpp  ShippingProfileModel.h  ShippingRateModel.cpp  ShippingRateModel.h  SocialMediaModel.cpp  SocialMediaModel.h  TagModel.cpp  TagModel.h  UserModel.cpp  UserModel.h
src/code/orm/: Function.h  QuerySet.h  WhereClause.h
src/code/sentry_catcher/: sentryHelper.cpp  sentryHelper.h
src/code/utils/: Base64.h  BaseClass.h  TransparentHasher.h  TransparentStringHash.h  config.h  cuuid.h  env.h
src/code/utils/db/: StringUtils.h
src/code/utils/exceptions/: BaseException.h  FileOpenException.h  HttpException.h
src/code/utils/jwt/: JWT.cc  JWT.h
src/code/utils/request/: Request.h
src/controllers/: Address.h  BaseCRUD.cpp  BaseCRUD.h  Basket.h  BasketItem.h  Country.h  FinancialDetails.h  Item.cc  Item.h  Media.cpp  Media.h  Order.cc  Order.h  Page.cc  Page.h  Review.h  ShippingProfile.h  ShippingRate.cc  ShippingRate.h  SocialMedia.cpp  SocialMedia.h  Tag.h  User.h
src/filters/: JwtFilter.cc  JwtFilter.h  JwtGoogleFilter.cc  JwtGoogleFilter.h  LocalRun.cpp  LocalRun.h
src/management/: CMakeLists.txt
src/management/create_user/: CMakeLists.txt
src/models/: AddressModel.cpp  AddressModel.h  BaseField.h  BaseModel.cpp  BaseModel.h  BaseModel.inl  BaseModelImpl.cpp  BaseModelImpl.h  BasketItemModel.cpp  BasketItemModel.h  BasketModel.cpp  BasketModel.h  CountriesIpsModel.cpp  CountriesIpsModel.h  CountryModel.cpp  CountryModel.h  FinancialDetailsModel.cpp  FinancialDetailsModel.h  ItemModel.cpp  ItemModel.h  MediaModel.cpp  MediaModel.h  OrderModel.cpp  OrderModel.h  PageModel.cpp  PageModel.h  ReviewModel.cpp  ReviewModel.h  ShippingProfileModel.cpp  ShippingProfileModel.h  ShippingRateModel.cpp  ShippingRateModel.h  SocialMediaModel.cpp  SocialMediaModel.h  TagModel.cpp  TagModel.h  UserModel.cpp  UserModel.h
src/orm/: Function.h  QuerySet.h
src/sentry_catcher/: sentryHelper.cpp  sentryHelper.h
src/utils/: Base64.h  BaseClass.h  env.h  sentryHelper.h  time.h  timeUtils.h
src/utils/db/: String.h  StringUtils.h
src/utils/exceptions/: BaseException.h  FileOpenException.h  HttpException.h  RequiredFieldsException.h
src/utils/jwt/: JWT.cc  JWT.h
src/utils/request/: Request.h
tests/: BaseTestClass.h  CMakeLists.txt  MockHttpClient.h  TestAddress.h  TestAiAnalyzeImage.h  TestBasket.h  TestBasketItem.h  TestCors.h  TestCountry.h  TestFinancialDetails.h  TestItem.h  TestMedia.h  TestOrder.h  TestPage.h  TestPin.h  TestPinterestOAuth.h  TestReview.h  TestShippingProfile.h  TestShippingRate.h  TestSocialMedia.h  TestUser.h  config.json  helper_tests.sh  main.cpp
tests/integration/: CMakeLists.txt
